Completes main navigation styles, fixes form dropdown spacing

--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -92,6 +92,48 @@
 			}
 		}
 	}
+	.menu-item-has-children{
+		&:hover{
+			> .sub-menu{
+				opacity: 1;
+				z-index: 1;
+			}
+		}
+		.sub-menu{
+			z-index: -10;
+			&::before{
+				content: '';
+				width: 0; 
+				height: 0; 
+				position: absolute;
+				left: 50%;
+				margin-left: -5px;
+				bottom: 100%;
+				border-left: 10px solid transparent;
+				border-right: 10px solid transparent;
+				border-bottom: 10px solid $navy;			
+			}
+		}
+		.menu-item-has-children{
+			.sub-menu{
+				margin: 0;
+				position: absolute;
+				top: 0;
+				left: 100%;
+				&::before{
+					content: '';
+					  width: 0; 
+					  height: 0; 
+					  border: 0px;
+				}
+			}
+			&:hover{
+				.sub-menu{
+					left: 100%;
+				}
+			}
+		}
+	}
 	ul.sub-menu{
 		margin: 0;
 		width: 100%;
